--- a/module/User/view/layout/user.phtml
+++ b/module/User/view/layout/user.phtml
@@ -10,13 +10,14 @@
         ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
     ?>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet"
+          type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
 
     <!-- Le styles -->
-    <?= $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
-        ->prependStylesheet($this->basePath('plugins/animate-css/animate.css'))
-        ->prependStylesheet($this->basePath('plugins/node-waves/waves.css'))
+    <?= $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/favicon.png'])
+        ->prependStylesheet($this->basePath('plugins/animate-css/animate.min.css'))
+        ->prependStylesheet($this->basePath('plugins/node-waves/waves.min.css'))
         ->prependStylesheet($this->basePath('css/themes/theme-deep-orange.min.css'))
         ->prependStylesheet($this->basePath('css/style.css'))
         ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
@@ -24,9 +25,10 @@
 
     <!-- Scripts -->
     <?= $this->headScript()
-        ->prependFile($this->basePath('pages/sign-in.js'))
         ->prependFile($this->basePath('js/admin.js'))
-        ->prependFile($this->basePath('plugins/node-waves/waves.js'))
+        ->prependFile($this->basePath('plugins/node-waves/waves.min.js'))
+        ->prependFile($this->basePath('js/axios.min.js'))
+        ->prependFile($this->basePath('js/vue.js'))
         ->prependFile($this->basePath('js/bootstrap.min.js'))
         ->prependFile($this->basePath('js/jquery-2.2.4.min.js'))
     ?>
